--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -64,9 +64,17 @@
     }
   } // /thumbnail-group
   .grid-icon{
-    position: relative;
+    position: absolute;
+    top: 0;
     color: white;
+    cursor: pointer;
     z-index: 21;
+    &:hover{
+      color: $bpnBlue;
+    }
+    i{
+      margin-right: 0.3em;
+    }
   }
   .main-image{
     width: 100%;
@@ -150,4 +158,7 @@
   background-color: #252525;
   cursor: pointer;
   z-index: 21;
+  &:hover{
+    background-color: $bpnBlue;
+  }
 }
