--- a/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_filterNav.scss
@@ -4,7 +4,7 @@
   display: block;
   height: 40px;
   width: 100%;
-  background-color: $bpnBlue;
+  background-color: $navBG;
   li{
     display: inline-block;
     padding: 10px 10px;
