--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -1,6 +1,9 @@
 .bounding-container{
   @include clearfix();
 }
+.container{
+  padding-top: 0em;
+}
 .register{
   padding: 1em;
   display: table;
