--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -125,10 +125,12 @@ nav#nav-menu {
   left: 0;
   top: 0;
   width: 100%;
+  height: 40px;
   font-size: 1em;
   text-align: right;
   opacity: 1;
   z-index: 10;
+  background-color: #f4f6f5;
 }
 nav#nav-menu .bounding-container {
   position: relative;
@@ -185,6 +187,7 @@ button#showMenu {
 
 .container {
   background: #efefef;
+  padding-top: 2.5em;
   height: 100%;
   min-height: 100%;
   position: relative;
@@ -341,7 +344,7 @@ button#showMenu {
 /* Individual Effects */
 /* Effect Rotate Left */
 .effect-rotateleft {
-  background: #f7f7f7;
+  background: #f4f6f5;
 }
 
 .effect-rotateleft .container {
