--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -19,10 +19,12 @@ nav#nav-menu {
 	left: 0;
 	top: 0;
   width: 100%;
+  height: 40px;
   font-size: 1em;
   text-align: right;
   opacity: 1;
   z-index: 10;
+  background-color: $navBG;
   .bounding-container{
   	position: relative;
   	margin: 0 auto;
@@ -80,6 +82,7 @@ button#showMenu{
 
 .container {
 	background: $pageBG;
+  padding-top: 2.5em;
 	height: 100%;
 	min-height: 100%;
 	position: relative;
