--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -78,11 +78,12 @@
   }
   .main-image{
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: black;
-    position: relative;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     opacity: 0;
     transition: 1s;
     z-index: 2;
@@ -109,9 +110,11 @@
       font-size: 1em;
     }
     .fa-chevron-left:before {
-      left: 23.33%;;
+      box-shadow: none;
+      left: 23.33%;
     }
     .fa-chevron-right:before {
+      box-shadow: none;
       right: 10%;
     }
     #left-field{
