--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -271,6 +271,19 @@ Animation
   overflow: auto;
   box-shadow: 0px 0px 10px #c3c3c3;
 }
+.article-details .social-sharing {
+  margin-top: 2em;
+  text-align: center;
+}
+.article-details .social-sharing .jssocials-share-link {
+  color: #097ABB;
+}
+.article-details .social-sharing .jssocials-share-logo {
+  border-bottom: 2px solid transparent;
+}
+.article-details .social-sharing .jssocials-share-logo:hover {
+  border-bottom: 2px solid black;
+}
 .article-details .photo-gallery-teaser {
   width: 160px;
   float: right;
