--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -154,6 +154,19 @@
     overflow: auto;
     box-shadow: 0px 0px 10px $eventsElementShadow;
   }
+  .social-sharing{
+    margin-top: 2em;
+    text-align: center;
+    .jssocials-share-link{
+      color: $bpnBlue;
+    }
+    .jssocials-share-logo{
+      border-bottom: 2px solid transparent;
+      &:hover{
+        border-bottom: 2px solid black;
+      }
+    }
+  }
   
   .photo-gallery-teaser{
     width: 160px;
