--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -271,17 +271,29 @@ Animation
   overflow: auto;
   box-shadow: 0px 0px 10px #c3c3c3;
 }
-.article-details .social-sharing {
+.article-details .social-sharing-container {
   margin-top: 2em;
   text-align: center;
+  padding: 1em 0;
 }
-.article-details .social-sharing .jssocials-share-link {
+.article-details .social-sharing-container span {
+  position: relative;
+  top: 0.3em;
+  transform: translateY(20%);
+  margin-right: 1em;
+  font-weight: bold;
+  color: #333;
+}
+.article-details .social-sharing-container .social-sharing {
+  display: inline-block;
+}
+.article-details .social-sharing-container .social-sharing .jssocials-share-link {
   color: #097ABB;
 }
-.article-details .social-sharing .jssocials-share-logo {
+.article-details .social-sharing-container .social-sharing .jssocials-share-logo {
   border-bottom: 2px solid transparent;
 }
-.article-details .social-sharing .jssocials-share-logo:hover {
+.article-details .social-sharing-container .social-sharing .jssocials-share-logo:hover {
   border-bottom: 2px solid black;
 }
 .article-details .photo-gallery-teaser {
@@ -372,12 +384,6 @@ Animation
   font-size: 1.5em;
   font-weight: bold;
 }
-.article-details .social-share {
-  margin-top: 2em;
-  width: 100%;
-  height: 50px;
-  background-color: tan;
-}
 .article-details .close-details {
   margin: 2em 0;
   padding: 1em 0;
@@ -392,6 +398,9 @@ Animation
 .article-details .close-details:hover {
   color: white;
   background-color: #097ABB;
+}
+.article-details .close-details i {
+  margin-right: 0.6em;
 }
 
 figure.open-up {
