--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -154,16 +154,28 @@
     overflow: auto;
     box-shadow: 0px 0px 10px $eventsElementShadow;
   }
-  .social-sharing{
+  .social-sharing-container{
     margin-top: 2em;
     text-align: center;
-    .jssocials-share-link{
-      color: $bpnBlue;
+    padding: 1em 0;
+    span{
+      position: relative;
+      top: 0.3em;
+      transform: translateY(20%);
+      margin-right: 1em;
+      font-weight: bold;
+      color: $bpnParagraph;
     }
-    .jssocials-share-logo{
-      border-bottom: 2px solid transparent;
-      &:hover{
-        border-bottom: 2px solid black;
+    .social-sharing{
+      display: inline-block;
+      .jssocials-share-link{
+        color: $bpnBlue;
+      }
+      .jssocials-share-logo{
+        border-bottom: 2px solid transparent;
+        &:hover{
+          border-bottom: 2px solid black;
+        }
       }
     }
   }
@@ -253,12 +265,6 @@
       font-weight: bold;
     }
   }
-  .social-share{
-    margin-top: 2em;
-    width: 100%;
-    height: 50px;
-    background-color: tan;
-  }
   .close-details{
     margin: 2em 0;
     padding: 1em 0;
@@ -272,6 +278,9 @@
     &:hover{
       color: white;
       background-color: $bpnBlue;
+    }
+    i{
+      margin-right: 0.6em;
     }
   }
 }
