--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -8,7 +8,7 @@ Responsive Media Queries (END)
 body:before {
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: white;
