--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -1,3 +1,9 @@
+/*-------------------------
+Responsive Media Queries
+-------------------------*/
+/*-----------------------------
+Responsive Media Queries (END)
+-----------------------------*/
 .bounding-container {
   overflow: auto;
   zoom: 1;
@@ -260,6 +266,77 @@ h3 {
   text-transform: uppercase;
 }
 
+@media only screen and (max-width: 480px) {
+  body {
+    background-image: url("../../assets/images/eventsBg.jpg");
+    background-size: 208%;
+  }
+
+  #showMenu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 12;
+  }
+  #showMenu i {
+    position: relative;
+    top: 0.3em;
+    left: 0.5em;
+    font-size: 2em;
+    text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
+    cursor: pointer;
+  }
+
+  #welcome-frame {
+    height: 38em;
+  }
+  #welcome-frame video {
+    width: auto;
+    height: 100%;
+  }
+
+  #about-frame {
+    padding: 4.5em 1em;
+  }
+
+  #events-frame {
+    padding: 6em 0.5em;
+    background-image: none;
+    background-size: contain;
+  }
+  #events-frame .hp-events-teaser {
+    width: 100%;
+    margin: 1em 0;
+  }
+  #events-frame .hp-events-teaser .center-copy {
+    font-weight: 700;
+    font-size: 1.4em;
+  }
+  #events-frame .hp-events-teaser .center-copy br {
+    display: none;
+  }
+
+  #gallery-frame .home-gallery-grid {
+    top: 30%;
+    width: 190vw;
+  }
+
+  #contact-frame .copy-container {
+    margin-top: -10px;
+  }
+  #contact-frame .copy-container h2 {
+    padding: 0.5em 0em;
+  }
+  #contact-frame .contact-form ul {
+    width: 85%;
+  }
+  #contact-frame .contact-form ul li input {
+    padding: 0.8em 3%;
+  }
+  #contact-frame .contact-form ul li button {
+    padding: 1em 6%;
+  }
+}
 .contact-form ul {
   margin: 0 auto;
   padding: 0;
