--- a/websites/BPN/www/site/compiled-dev/css/news.css
+++ b/websites/BPN/www/site/compiled-dev/css/news.css
@@ -1,7 +1,7 @@
 body:before {
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: white;
