--- a/websites/BPN/www/site/templates/styles/sass/homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/homePg.scss
@@ -1,3 +1,4 @@
 @import "partials/variables.scss";
+@import "partials/breakpoints.scss";
 @import "partials/homePg.scss";
 @import "partials/contact.scss";
