--- a/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
@@ -2,7 +2,7 @@
 body:before{
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: white;
