mpbile nav work

--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -141,11 +141,8 @@ nav#nav-menu a {
   opacity: 1;
   display: inline-block;
   text-decoration: none;
-  margin: 10px 17px 0 0;
+  margin: 1em 0;
   font-size: 1.1em;
-}
-nav#nav-menu a:last-child {
-  margin-right: 1.5em;
 }
 nav#nav-menu a::before {
   display: none;
