added new HP img

--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -147,6 +147,9 @@ nav#nav-menu a {
 nav#nav-menu a::before {
   display: none;
 }
+nav#nav-menu a i {
+  margin-right: 0.5em;
+}
 
 button#showMenu {
   display: none;
@@ -450,6 +453,22 @@ button#showMenu {
 @media screen and (max-height: 31.6em) {
   .outer-nav a {
     margin-bottom: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  #showMenu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 12;
+  }
+  #showMenu i {
+    position: relative;
+    top: 0.3em;
+    left: 0.5em;
+    font-size: 2em;
+    text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
+    cursor: pointer;
   }
 }
 * {
