--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -283,22 +283,9 @@ h3{
     background-image: url('../../assets/images/eventsBg.jpg');
     background-size: 208%;
   }
-  #showMenu{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 12;
-    i{
-      position: relative;
-      top: 0.3em;
-      left: 0.5em;
-      font-size: 2em;
-      text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
-      cursor: pointer;
-    }
-  }
   #welcome-frame {
     height: 38em;
+    overflow: hidden;
     video{
       width: auto;
       height: 100%;
