--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -39,6 +39,9 @@ nav#nav-menu {
 	  &::before{
 	  	display: none;
 	  }
+	  i{
+	  	margin-right: 0.5em;
+	  }
   }
 }
 
@@ -327,4 +330,21 @@ button#showMenu{
 	.outer-nav a {
 		margin-bottom: 20px;
 	}
+}
+
+@include MQ(S){
+  #showMenu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 12;
+    i{
+      position: relative;
+      top: 0.3em;
+      left: 0.5em;
+      font-size: 2em;
+      text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
+      cursor: pointer;
+    }
+  }
 }
