--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -1,4 +1,5 @@
 @import "partials/variables.scss";
+@import "partials/breakpoints.scss";
 @import "partials/layout.scss";
 @import "partials/filterNav.scss";
 @import "partials/eventsTeasers.scss";
