updated styles for the photoGallery Mobile

--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -322,7 +322,7 @@ figure.open-up {
       height: 200px;
     }
     .close-details{
-      margin: 2em 0 0 0;
+      margin: 2em 0;
     }
   } 
 }
