--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -445,7 +445,7 @@ figure.open-up figcaption {
     height: 200px;
   }
   .article-details .close-details {
-    margin: 2em 0 0 0;
+    margin: 2em 0;
   }
 }
 #map {
@@ -628,6 +628,14 @@ figure.open-up figcaption {
 }
 .photo-gallery-close-btn:hover {
   background-color: #097ABB;
+}
+
+@media only screen and (max-width: 480px) {
+  .photo-gallery-container .thumbnails-group .thumbnail {
+    height: 5em;
+    width: 18%;
+    margin: 1%;
+  }
 }
 
 /*# sourceMappingURL=events.css.map */
