--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -165,3 +165,15 @@
     background-color: $bpnBlue;
   }
 }
+
+@include MQ(S){
+  .photo-gallery-container{
+    .thumbnails-group{
+      .thumbnail{
+        height: 5em;
+        width: 18%;
+        margin: 1%;
+      }
+    }
+  }
+}
