--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -150,8 +150,11 @@ nav#nav-menu a::before {
 nav#nav-menu a i {
   margin-right: 0.5em;
 }
+nav#nav-menu a i .fa:before {
+  display: none;
+}
 
-button#showMenu {
+#showMenu {
   display: none;
 }
 
@@ -469,6 +472,10 @@ button#showMenu {
     font-size: 2em;
     text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
     cursor: pointer;
+  }
+
+  #nav-menu a i .fa:before {
+    display: none;
   }
 }
 * {
