--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -41,11 +41,14 @@ nav#nav-menu {
 	  }
 	  i{
 	  	margin-right: 0.5em;
+	  	.fa:before{
+	  		display: none;
+	  	}
 	  }
   }
 }
 
-button#showMenu{
+#showMenu{
 	display: none;
 }
 
@@ -346,5 +349,14 @@ button#showMenu{
       text-shadow: 0px 0px 2px white, 0px 0px 1px white, 0px 0px 1px white;
       cursor: pointer;
     }
+  }
+  #nav-menu{
+  	a{
+  		i{
+		  	.fa:before{
+		  		display: none;
+		  	}
+		  }
+  	}
   }
 }
