--- a/websites/BPN/www/site/templates/styles/sass/news.scss
+++ b/websites/BPN/www/site/templates/styles/sass/news.scss
@@ -1,3 +1,5 @@
 @import "partials/variables.scss";
+@import "partials/breakpoints.scss";
 @import "partials/layout.scss";
 @import "partials/teaserItem.scss";
+@import "partials/news.scss";
