--- a/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_nav.scss
@@ -18,8 +18,9 @@ html, body, .perspective {
 nav#nav-menu {
 	left: 0;
 	top: 0;
-  width: 100%;
-  height: 40px;
+  width: calc(100% - 1.3em);
+  padding-right: 1.3em;
+  height: auto;
   font-size: 1em;
   text-align: right;
   opacity: 1;
@@ -56,7 +57,7 @@ nav#nav-menu {
 
 .container {
 	background: $pageBG;
-  padding-top: 2.5em;
+  padding-top: 4.5em;
 	height: 100%;
 	min-height: 100%;
 	position: relative;
