--- a/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_teaserItem.scss
@@ -70,7 +70,7 @@ body{
   }
   .close-content-btn{
     position: fixed;
-    top: 30px;
+    top: 0.8em;
     right: 0;
     width: 30px;
     height: 30px;
