--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -360,4 +360,45 @@ h3 {
   color: #333;
 }
 
+.contact-overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 20;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.contact-container {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 300px;
+  transform: translate(-50%, 10%) rotateX(30deg);
+  padding: 10px;
+  background-color: #80bcdc;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+.contact-container form ul {
+  width: 100%;
+}
+
+.contact-overlay-in {
+  opacity: 0.95;
+  visibility: visible;
+}
+
+.contact-form-in {
+  transform: translate(-50%, 50%) rotateX(0deg);
+  z-index: 21;
+  opacity: 1;
+  visibility: visible;
+}
+
 /*# sourceMappingURL=homePg.css.map */
