--- a/websites/BPN/www/site/templates/styles/sass/partials/_contact.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_contact.scss
@@ -34,3 +34,49 @@
     color: $bpnParagraph;
   }
 }
+
+// styles for the global contact form
+.contact-overlay{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 20;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.contact-container{
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 300px;
+  transform: translate(-50%,10%) rotateX(30deg);
+  padding: 10px;
+  background-color: #80bcdc;
+  z-index: -1;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+  form{
+    ul{
+      width: 100%;
+    }
+  }
+}
+
+// animate the form @include 
+
+.contact-overlay-in{
+  opacity: 0.95;
+  visibility: visible;
+}
+
+.contact-form-in{
+  transform: translate(-50%,50%) rotateX(0deg);
+  z-index: 21;
+  opacity: 1;
+  visibility: visible;
+}
