--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -3,6 +3,7 @@
   $pageBG: #efefef;
   $navBG: #f4f6f5;
   $bpnBlue: #097ABB;
+  $bpnMedDarkBlue: #4a6979;
   $bpnDarkBlue: #383C3E;
   $bpnPaleGray: #efefef;
   $bpnLightGray: #d6d6d6;
