--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -15,7 +15,9 @@ Responsive Media Queries (END)
 
 .register {
   padding: 1em;
-  display: table;
+  width: 190px;
+  top: 0;
+  height: 1.25em;
   margin: 40px auto 0 auto;
   position: relative;
   text-transform: uppercase;
@@ -23,6 +25,8 @@ Responsive Media Queries (END)
   color: #097ABB;
   text-shadow: none;
   text-decoration: none;
+  z-index: 2;
+  transition: 1s;
 }
 .register:after {
   content: " ";
@@ -37,8 +41,14 @@ Responsive Media Queries (END)
   outline: solid #007ab9 5px;
   outline-offset: 0px;
   z-index: -1;
-  transform: translateY(-50%);
+  transform: translate(0%, -50%);
   transition: 0.5s;
+}
+
+.register-open {
+  height: 15em;
+  width: 250px;
+  top: -270px;
 }
 
 a {
@@ -379,7 +389,8 @@ h3 {
   width: 300px;
   transform: translate(-50%, 10%) rotateX(30deg);
   padding: 10px;
-  background-color: #80bcdc;
+  background-color: #4a6979;
+  border-radius: 8px;
   z-index: -1;
   opacity: 0;
   visibility: hidden;
