--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -10,6 +10,7 @@
   $bpnParagraph: #333;
   $bpnGrayBlue: #d0d7dc;
   $eventsElementShadow: #c3c3c3;
+  $successGreen: #00b94d;
   // events colors
   $bpnTan: #b8a386;
   $bpnGreen: #79c189;
