--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -424,9 +424,23 @@ figure.open-up figcaption {
   opacity: 0;
 }
 
+@media only screen and (max-width: 960px) {
+  .bounding-container {
+    padding: 0 0.5em;
+  }
+  .bounding-container .teaser {
+    width: 48%;
+    margin: 0.5em 1%;
+  }
+}
 @media only screen and (max-width: 768px) {
   .article-details .social-sharing-container span {
     top: 0.8em;
+  }
+
+  figcaption h2 {
+    font-size: 1.1em;
+    margin-bottom: 0.5em;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -459,6 +473,29 @@ figure.open-up figcaption {
   height: 400px;
   width: 100%;
   box-shadow: 0px 0px 10px #c3c3c3;
+}
+
+.bounding-container .teaser {
+  width: 19%;
+  min-width: 220px;
+  margin: 0.5em 0.5%;
+  height: 260px;
+}
+.bounding-container .teaser .image-container {
+  height: 210px;
+}
+.bounding-container .teaser figcaption {
+  padding: 0em 4%;
+  width: 92%;
+  display: inline-block;
+}
+.bounding-container .teaser figcaption h2 {
+  margin: 0;
+  width: 100%;
+  font-size: 1em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .photo-gallery-perspective {
