--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -16,6 +16,7 @@
     position: absolute;
     height: 3px;
     z-index: 2;
+    left: 0;
     bottom: 0;
     background-color: $bpnBlue;
     width: 0%;
