--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -32,7 +32,7 @@
   .image-container{
     position: relative;
     width: 100%;
-    height: 270px;
+    height: auto;
     overflow: hidden;
     img{
       width: 100%;
