completed form validation

--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -70,6 +70,14 @@ Responsive Media Queries (END)
   transform: translate(0%, -50%);
   transition: 0.5s;
 }
+.register .security-image {
+  float: left;
+  width: 49%;
+  padding-left: 0.5em;
+}
+.register input[name="human_confirmation"] {
+  width: 38%;
+}
 
 #reg-form {
   opacity: 0;
@@ -79,9 +87,10 @@ Responsive Media Queries (END)
 }
 
 .register-open {
-  height: 25em;
+  height: 29em;
   width: 250px;
   top: -360px;
+  cursor: default;
 }
 .register-open #reg-form {
   opacity: 1;
